--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -18,6 +18,9 @@ protobuf = "2.8"
 futures = "0.3"
 tempfile = "3.0"
 fail = "0.5"
+prometheus = { version = "0.13", features = ["nightly"] }
+prometheus-static-metric = "0.5"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 engine_test = { path = "../engine_test" }
