--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -244,7 +244,7 @@
 ## Set it to 0 will cause no space is reserved at all. It's generally used for tests.
 # reserve-space = "5GB"
 
-## The maximum hang time after rocksdb detects restorable background errors. When some data belonging
+## The maximum recovery time after rocksdb detects restorable background errors. When the data belonging
 ## to the data range is damaged, it will be reported to PD, and PD will add `evict-leader-scheduler`
 ## in this store to minimize the impact on user workload as much as possible. When hung, the corruption
 ## SST file will remain, and the KV storage engine can still write new content normally, but it will
@@ -254,7 +254,7 @@
 ## current store, TiKV will panic.
 ##
 ## Set to 0 to disable this feature if you want to panic immediately when encountering such an error.
-# max-background-error-hang-time = "24h"
+# background-error-recovery-window = "24h"
 
 [storage.block-cache]
 ## Whether to create a shared block cache for all RocksDB column families.
