--- a/components/test_raftstore/Cargo.toml
+++ b/components/test_raftstore/Cargo.toml
@@ -39,7 +39,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client", default-features = false }
 protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
-raftstore = { path = "../raftstore", default-features = false }
+raftstore = { path = "../raftstore", default-features = false, features = ["testexport"] }
 rand = "0.8"
 resolved_ts = { path = "../resolved_ts" }
 security = { path = "../security", default-features = false }
