--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -24,3 +24,4 @@ slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global
 [dev-dependencies]
 kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
 tempfile = "3.0"
+engine_test = { path = "../engine_test" }
