--- a/components/test_raftstore/Cargo.toml
+++ b/components/test_raftstore/Cargo.toml
@@ -58,6 +58,7 @@ engine_rocks = { path = "../engine_rocks", default-features = false }
 file_system = { path = "../file_system" }
 futures = "0.3"
 grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored"] }
+grpcio-health = { version = "0.9", default-features = false, features = ["protobuf-codec"] }
 lazy_static = "1.3"
 log_wrappers = { path = "../log_wrappers" }
 keys = { path = "../keys", default-features = false }
