--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -40,6 +40,7 @@ file_system = { path = "../file_system", default-features = false }
 fs2 = "0.4"
 futures = "0.3"
 futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
+grpcio-health = { version = "0.9", default-features = false, features = ["protobuf-codec"] }
 into_other = { path = "../into_other",  default-features = false }
 itertools = "0.10"
 keys = { path = "../keys", default-features = false }
