--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -45,13 +45,14 @@ tempfile = "3.0"
 serde = "1.0"
 serde_derive = "1.0"
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+#rust-rocksdb = { git = "https://github.com/subains/rust-rocksdb.git"  }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 protobuf = "2"
 fail = "0.5"
 case_macros = { path = "../case_macros" }
 
 [dependencies.rocksdb]
-git = "https://github.com/tikv/rust-rocksdb.git"
+git = "https://github.com/subains/rust-rocksdb.git"
 package = "rocksdb"
 features = ["encryption"]
 
