--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -26,6 +26,7 @@ etcd-client = { version = "0.7", features = ["pub-response-field"] }
 external_storage = { path = "../external_storage", default-features = false }
 external_storage_export = { path = "../external_storage/export", default-features = false }
 fail = "0.5"
+yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 file_system = { path = "../file_system" }
 futures = "0.3"
