--- a/components/cloud/Cargo.toml
+++ b/components/cloud/Cargo.toml
@@ -29,7 +29,7 @@ thiserror = "1.0"
 tikv_util = { path = "../tikv_util", default-features = false }
 url = "2.0"
 lazy_static = "1.3"
-prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
+prometheus = { version = "0.12", features = ["nightly"] }
 
 [dev-dependencies]
 fail = "0.4"
