--- a/components/cloud/aws/Cargo.toml
+++ b/components/cloud/aws/Cargo.toml
@@ -44,12 +44,8 @@ tokio = { version = "1.5", features = ["time"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 tikv_util = { path = "../../tikv_util", default-features = false }
 url = "2.0"
-<<<<<<< HEAD
-=======
-thiserror = "1.0"
 lazy_static = "1.3"
-prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
->>>>>>> c5aa84108... Backup: add S3 metrics && add s3_multi_part_size config  (#11666)
+prometheus = { version = "0.12", features = ["nightly"] }
 
 [dev-dependencies]
 futures = "0.3"
