--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -51,6 +51,7 @@ engine_traits = { path = "../engine_traits", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 xorf = { version = "0.8", features = ["serde"] }
 zstd-sys = "1.6.3+zstd.1.5.2"
+tikv_alloc = { path = "../tikv_alloc" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 crc32fast = { version = "1.3", features = ["nightly"] }
