--- a/components/rfengine/Cargo.toml
+++ b/components/rfengine/Cargo.toml
@@ -29,6 +29,7 @@ tempfile = "3.0"
 lazy_static = "1.3"
 libc = "0.2"
 thiserror = "1.0"
+tikv_alloc = { path = "../tikv_alloc" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 crc32fast = { version = "1.3", features = ["nightly"] }
