--- a/etc/cargo.config.dist
+++ b/etc/cargo.config.dist
@@ -2,6 +2,9 @@
 # _literally_ for packaging and releasing; and cases where we _must_
 # benchmark against a fully-optimized build.
 
+[build]
+rustflags = ["-Cforce-frame-pointers=yes"]
+
 [profile.release]
 opt-level = 3
 debug = true
