--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,7 +123,7 @@ paste = "1.0"
 pd_client = { path = "components/pd_client", default-features = false }
 pin-project = "1.0"
 pnet_datalink = "0.23"
-pprof = { git = "https://github.com/tikv/pprof-rs.git", rev = "63d3ff6780c49c2b0e14b399803a77a4c5145308", default-features = false, features = ["flamegraph", "frame-pointer", "protobuf-codec"] }
+pprof = { version = "^0.9", default-features = false, features = ["flamegraph", "frame-pointer", "protobuf-codec"] }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 protobuf = { version = "2.8", features = ["bytes"] }
