--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -75,6 +75,7 @@ end-point-max-concurrency = 10
 end-point-perf-level = 5
 snap-max-write-bytes-per-sec = "10MB"
 snap-max-total-size = "10GB"
+max-snapshot-file-raw-size = "10GB"
 stats-concurrency = 10
 heavy-load-threshold = 25
 heavy-load-wait-duration = "2ms"
