log-backup: added quota for initial scanning (#12469)
close tikv/tikv#12468

Added quota for initial scanning of log backup.

Signed-off-by: Yu Juncen <yujuncen@pingcap.com>

Co-authored-by: Ti Chi Robot <ti-community-prow-bot@tidb.io>
Co-authored-by: kennytm <kennytm@gmail.com>

--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -54,6 +54,7 @@ tokio-stream = "0.1"
 tokio-util = { version = "0.7", features = ["compat"] } 
 txn_types = { path = "../txn_types", default-features = false }
 uuid = "0.8"
+yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [dev-dependencies]
 async-trait = "0.1"
