causal_ts: fix issue #12498
Issue Number: #12498

Signed-off-by: pingyu <yuping@pingcap.com>

--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 api_version = { path = "../api_version", default-features = false }
+collections = { path = "../collections" }
 engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
