--- a/components/cloud_server/Cargo.toml
+++ b/components/cloud_server/Cargo.toml
@@ -85,6 +85,7 @@ serde_ignored = "0.1"
 serde_json = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
+sst_importer = { path = "../sst_importer" }
 tempfile = "3.0"
 thiserror = "1.0"
 tikv = { path = "../..", default-features = false }
