--- a/components/rfstore/Cargo.toml
+++ b/components/rfstore/Cargo.toml
@@ -16,6 +16,7 @@ crossbeam = "0.8"
 dashmap = "4.0"
 dyn-clone = "1.0"
 encryption = { path = "../encryption", default-features = false }
+engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
 fail = "0.4"
@@ -23,6 +24,7 @@ fs2 = "0.4"
 futures = "0.3"
 futures-util = { version = "0.3.1", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+keys = { path = "../keys" }
 kvengine = { path = "../kvengine" }
 kvenginepb = { path = "../kvenginepb", default-features = false }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
@@ -43,6 +45,7 @@ serde_derive = "1.0"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog-term = "2.4"
+sst_importer = { path = "../sst_importer" }
 thiserror = "1.0"
 tikv_alloc = { path = "../tikv_alloc" }
 tikv_util = { path = "../tikv_util", default-features = false }
