--- a/components/rfengine/Cargo.toml
+++ b/components/rfengine/Cargo.toml
@@ -30,6 +30,7 @@ slog-term = "2.4"
 tempfile = "3.0"
 thiserror = "1.0"
 tikv_alloc = { path = "../tikv_alloc" }
+tikv_util = { path = "../tikv_util" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 crc32fast = { version = "1.3", features = ["nightly"] }
