--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,7 +125,7 @@ paste = "1.0"
 pd_client = { path = "components/pd_client", default-features = false }
 pin-project = "1.0"
 pnet_datalink = "0.23"
-pprof = { version = "^0.9", default-features = false, features = ["flamegraph", "protobuf-codec"] }
+pprof = { git = "https://github.com/mornyx/pprof-rs.git", branch = "fix-errno", default-features = false, features = ["flamegraph", "protobuf-codec"] }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 protobuf = { version = "2.8", features = ["bytes"] }
