--- a/components/tidb_query_expr/Cargo.toml
+++ b/components/tidb_query_expr/Cargo.toml
@@ -11,7 +11,7 @@ bstr = "0.2.8"
 byteorder = "1.2"
 codec = { path = "../codec", default-features = false }
 file_system = { path = "../file_system", default-features = false }
-flate2 = { version = "=1.0.11", default-features = false, features = ["zlib"] }
+flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
 hex = "0.4"
 log_wrappers = { path = "../log_wrappers" }
 match_template = { path = "../match_template" }
