--- a/components/security/Cargo.toml
+++ b/components/security/Cargo.toml
@@ -12,6 +12,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 tikv_util = { path = "../tikv_util", default-features = false }
+tonic = "0.5"
 
 [dev-dependencies]
 tempfile = "3.0"
