--- a/Cargo.toml
+++ b/Cargo.toml
@@ -262,6 +262,7 @@ members = [
   "components/server",
   "components/sst_importer",
   "components/test_backup",
+  "components/test_cloud_server",
   "components/test_coprocessor",
   "components/test_coprocessor_plugin/example_plugin",
   "components/test_pd",
