--- a/components/tikv_util/Cargo.toml
+++ b/components/tikv_util/Cargo.toml
@@ -55,6 +55,7 @@ time = "0.1"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-executor = "0.1"
 tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
+tracker = { path = "../tracker" }
 url = "2"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
